--- a/views/login.pug
+++ b/views/login.pug
@@ -1,7 +1,14 @@
 extends layout.pug
 
 block content
-    validationErrorSummary(errors)
+    if errors
+        div(class = 'error')
+            p Errors:
+            ul
+                each error in errors
+                    li = error
+
+
     form(action='/login' method='post')
         input(type='hidden' name='_csrf' value=csrfToken)
         div (class = "login-form")
