signup get route

--- a/views/index.pug
+++ b/views/index.pug
@@ -13,7 +13,7 @@ block content
       each haunt in haunts
         li
           div(class= hauntCard)
-            img(src="img/#{haunt.id}", alt=haunt.title)
+            img(src="img/image-#{haunt.id}.jpg", alt=haunt.title)
             p= haunt.title
             p= haunt.score
   div(class= 'login_signin')
