--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,3 +1,13 @@
 h1 {
-    color: #555555;
+    color: red;
+}
+
+p{
+    text-align: center;
+}
+
+
+img{
+    height: 500px;
+    width: 700px;
 }
