--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,6 +15,8 @@ html
                       if (locals.authenticated)
                           li
                               a(href="/users/" + user.id) Profile
+                          li
+                              a(href="/users/logout") Log out
                       else
                           li
                               a(href="/login") Login
