rendered one genre of haunts

--- a/views/haunts.pug
+++ b/views/haunts.pug
@@ -1,5 +1,6 @@
 extends layout
 append head
+  link(rel="stylesheet" href="/stylesheets/haunts.css")
 block content
   h1= "all the haunts"
   each haunt in haunts
