--- a/views/index.pug
+++ b/views/index.pug
@@ -25,7 +25,7 @@ block content
       a(href="/signup") Sign Up
     br
     button(class= 'button')
-      a(href="/user/1") Demo User
+      a(href="/demo") Demo User
     br
     a(href="/login") Login
     //- if is logged in
