--- a/views/haunts.pug
+++ b/views/haunts.pug
@@ -2,7 +2,7 @@ extends layout
 append head
   link(rel="stylesheet" href="/stylesheets/haunts.css")
 block content
-  h1= "All the haunts"
+  h1= "All of the haunts"
     br
     h2="Historical"
       br
