--- a/public/stylesheets/haunts.css
+++ b/public/stylesheets/haunts.css
@@ -1,7 +1,3 @@
- /* *{
-  background-color: black;
-} */
-
 h1 {
   color: red;
   margin-top:10px;
@@ -9,24 +5,19 @@ h1 {
 }
 
 h2 {
-  color:black;
   font-size:20px;
 
 }
 
-p{
+p {
   text-align:left;
 }
 
-a{
+a {
   position:relative;
+  text-decoration: none;
 
 }
-
-a:hover {
-  border: 5px solid yellow;
-}
-
 
 body {
   margin:50px;
@@ -40,13 +31,17 @@ li{
 
 }
 
-img{
+img {
   height: 300px;
   width: 350px;
 }
 
+img:hover {
+  box-shadow: 0px 0px 12px var(--pumpkin);
+}
 
-.historical{
+
+.historical {
   /* border: 5px solid red; */
   float: left;
   width: 33.33%;
@@ -54,14 +49,14 @@ img{
   text-align: left;
 }
 
-.outdoors{
+.outdoors {
   /* border: 5px solid red; */
   float: left;
   width: 33.33%;
   padding: 5px;
 }
 
-.asylum{
+.asylum {
   /* border: 5px solid red; */
   float: left;
   width: 33.33%;
