--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,6 +5,7 @@ html
         title="Good Haunts"
         link(rel='stylesheet' href='/stylesheets/reset.css')
         link(rel='stylesheet' href='/stylesheets/navbar.css')
+        link(rel='stylesheet' href='/stylesheets/profile.css')
   body
       if (!splash)
           nav
