--- a/views/reviews.pug
+++ b/views/reviews.pug
@@ -1,18 +1,19 @@
 extends layout.pug
+include utils.pug
 
 block content
-    h1= "Reviews!"
+    h1= "Leave a review"
     +error
 
-
-    form(action='/login' method='post')
+    form(action='/reviews/new' method='post')
         input(type='hidden' name='_csrf' value=csrfToken)
-        div(class = "login-form")
-            label(for = "email") Email
-            input(class = "login" type = "email" name = "email" value = email)
+        input(type='hidden' name='hauntId' value=haunt.id)
+        div(class= "form")
+            label(for= "review") Create a review
+            textarea(class= "review", placeholder= "This place is great because...")
+            button Submit
+            a(href='/haunts/' + haunt.id class='btn btn-cancel') Cancel
 
-            label(for = "password") Password
-            input(class = "login" type = "password" name = "password")
 
-            button(type='submit' class='btn btn-login') Login
-            a(href='/' class='btn btn-cancel') Cancel
+//- check if form action path is correct
+//- Line 18 after submit should href to the haunts/:id page
