Added review seeds and using seeds in haunt reviews

--- a/views/specificHaunt.pug
+++ b/views/specificHaunt.pug
@@ -18,4 +18,4 @@ block content
       div
         p= "Score:" + review.score
         p Review:
-        p= review.description
+        p= review.review
