--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,6 +6,8 @@ html
         link(rel='stylesheet' href='/stylesheets/reset.css')
         link(rel='stylesheet' href='/stylesheets/navbar.css')
         link(rel='stylesheet' href='/stylesheets/profile.css')
+        link(rel='stylesheet' href='/stylesheets/forms.css')
+
   body
       if (!splash)
           nav
