--- a/views/reviews.pug
+++ b/views/reviews.pug
@@ -5,14 +5,28 @@ block content
     h1= "Leave a review"
     +error
 
-    form(action='/reviews/new' method='post')
-        input(type='hidden' name='_csrf' value=csrfToken)
-        input(type='hidden' name='hauntId' value=haunt.id)
-        div(class= "form")
-            label(for= "review") Create a review
-            textarea(class= "review", placeholder= "This place is great because...")
-            button Submit
-            a(href='/haunts/' + haunt.id class='btn btn-cancel') Cancel
+    div(id="rating-container")
+        label ☆
+        input(type= "radio", name= "rating", class="flame", value="5", id="5")
+        label ☆
+        input(type= "radio", name= "rating", class="flame", value="4", id="4")
+        label ☆
+        input(type= "radio", name= "rating", class="flame", value="3", id="3")
+        label ☆
+        input(type= "radio", name= "rating", class="flame", value="2", id="2")
+        label ☆
+        input(type= "radio", name= "rating", class="flame", value="1", id="1")
+    if (locals.authenticated)
+        form(action='/reviews/new' method='post')
+            input(type='hidden' name='_csrf' value=csrfToken)
+            input(type='hidden' name='hauntId' value=haunt.id)
+            div(class= "form")
+                label(for= "review") Create a review
+                textarea(class= "review", placeholder= "This place is great because...")
+                button Submit
+                a(href='/haunts/' + haunt.id class='btn btn-cancel') Cancel
+    else
+        p= "You must be logged in to leave a review."
 
 
 //- check if form action path is correct
