--- a/views/specificHaunt.pug
+++ b/views/specificHaunt.pug
@@ -1,6 +1,6 @@
 extends layout
 append head
-  link(rel="stylesheet" href="/stylesheets/haunts.css")
+  link(rel="stylesheet" href="/stylesheets/specific-haunt.css")
 block content
   div(class="topDiv")
     div(class="topLeftDiv")
@@ -16,6 +16,9 @@ block content
   div(class="bottomDiv")
     each review in reviews
       div
-        p= "Score:" + review.score
+        div(class="scoreName")
+          p
+            a(href="/users/" + review.userId)= review.User.fullName
+          p= "Score:" + review.score
         p Review:
         p= review.review
