--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -21,15 +21,16 @@ a {
   color: var(--xanadu);
   text-shadow: var(--periwinkle) 1px 1px 1px;
   position: relative;
+  text-decoration: none;
 }
 
 a::before {
   content: "";
   position: absolute;
   width: 0;
-  height: 1px;
+  height: 2px;
   background-color: var(--pumpkin);
-  bottom: 0;
+  bottom: -2px;
   transition: width 250ms 0s;
 }
 
