--- a/public/stylesheets/specific-haunt.css
+++ b/public/stylesheets/specific-haunt.css
@@ -1,6 +1,15 @@
+/*
+  --xanadu: #7e9181;
+  --pumpkin: #fe7f2d;
+  --periwinkle: #c7cedb;
+  --bistro: #2b2118;
+  --cadet: #2a2e45;
+  */
+
 .topDiv {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  justify-content: space-evenly;
+  margin: 0 30px;
 }
 
 .topLeftDiv {
@@ -8,7 +17,6 @@
   justify-content: center;
   width: 50vw;
   padding: 20px;
-  /* border: 3px solid red; */
 }
 
 .topLeftDiv > img {
@@ -19,7 +27,11 @@
 .topRightDiv {
   position: relative;
   padding: 50px 20px;
-  /* border: 3px solid red; */
+  font-size: 24px;
+}
+
+.topRightDiv h2 {
+  font-size: 40px;
 }
 
 .topRightDiv > a {
@@ -28,7 +40,13 @@
   bottom: 70px;
 }
 
+#divider {
+  border-top: 3px solid rgba(254, 127, 45, 0.5);
+  box-shadow: -10px 0px 10px var(--pumpkin);
+}
+
 .bottomDiv {
+  padding-top: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -37,9 +55,24 @@
 .bottomDiv div {
   border: 1px solid red;
   width: 40vw;
+  background-color: var(--xanadu);
 }
 
-.scoreName {
+.bottomDiv .scoreName {
   display: flex;
-  align-items: center;
+  position: relative;
+  background-color: var(--bistro);
+}
+
+.scoreName > * {
+  padding: 0px 20px;
+}
+
+#score {
+  position: absolute;
+  right: 0;
+}
+
+.reviewText {
+  padding: 0px 20px;
 }
