--- a/public/stylesheets/haunts.css
+++ b/public/stylesheets/haunts.css
@@ -1,34 +1,30 @@
 h1 {
-  color: red;
-  margin-top:10px;
+  color: var(--pumpkin);
+  margin-top: 10px;
   margin-bottom: 10px;
 }
 
 h2 {
-  font-size:20px;
-
+  font-size: 20px;
 }
 
 p {
-  text-align:left;
+  text-align: left;
 }
 
 a {
-  position:relative;
+  position: relative;
   text-decoration: none;
-
 }
 
 body {
-  margin:50px;
+  margin: 50px;
 }
 
-li{
-
-  display:flex;
+li {
+  display: flex;
   flex-direction: row;
   list-style-type: none;
-
 }
 
 img {
@@ -39,7 +35,6 @@ img {
 img:hover {
   box-shadow: 0px 0px 12px var(--pumpkin);
 }
-
 
 .historical {
   /* border: 5px solid red; */
