--- a/views/haunts.pug
+++ b/views/haunts.pug
@@ -7,7 +7,7 @@ block content
     h2="Historical"
       br
       each haunt in haunts
-        div(class= 'historical')
+        div(class= 'historical hauntCard')
           a(href="/haunts/1")
             img(src='/images/image-' + haunt.id + '.jpeg' alt='image')
             br
@@ -16,7 +16,7 @@ block content
     h2="Outdoors"
       br
       each haunt in haunts2
-        div(class= 'outdoors')
+        div(class= 'outdoors hauntCard')
           img(src='/images/image-' + haunt.id + '.jpeg' alt='image')
           br
           a(href="/haunts/1")= haunt.title
@@ -24,7 +24,7 @@ block content
     h2="Asylum"
       br
       each haunt in haunts3
-        div(class= 'asylum')
+        div(class= 'asylum hauntCard')
           img(src='/images/image-' + haunt.id + '.jpeg' alt='image')
           br
           a(href="/haunts/1")= haunt.title
