--- a/views/profile.pug
+++ b/views/profile.pug
@@ -11,6 +11,7 @@ block content
     ul
         if (hauntlists.length)
             each hauntlist in hauntlists
-                li=hauntlist.title + "(" + Object.keys(hauntlist).length + ")"
+                li
+                    a(href="/hauntlists/" + hauntlist.id)= hauntlist.title + "(" + Object.keys(hauntlist).length + ")"
         else
             p= "No haunt lists to show yet!"
