--- a/views/hauntlist.pug
+++ b/views/hauntlist.pug
@@ -15,3 +15,4 @@ block content
                     a(href="/haunts/" + haunt.id)= haunt.title
                     span= haunt.score
                     button(class="delete") x
+    script(src="/javascripts/hauntlist.js")
