--- a/views/haunts.pug
+++ b/views/haunts.pug
@@ -27,5 +27,5 @@ block content
         div(class= 'asylum hauntCard')
           img(src='/images/image-' + haunt.id + '.jpeg' alt='image')
           br
-          a(href="/haunts/" + haunt.id))= haunt.title
+          a(href="/haunts/" + haunt.id)= haunt.title
           p= haunt.score
