--- a/views/edit-review.pug
+++ b/views/edit-review.pug
@@ -12,6 +12,7 @@ block content
             input(type='hidden' name='_csrf' value=csrfToken)
             input(type='hidden' name='userId' value=user.id)
             input(type='hidden' name='hauntId' value=haunt.id)
+            input(type='hidden' name='reviewId' value=reviewId)
             div(id="rating-container")
                 label(for= "5") ☆
                 input(type= "radio", name= "score", value="5", id="5")
