fix sign out bug

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -19,7 +19,7 @@ html
                           li
                               a(href="/users/" + user.id class="nav-links") Profile
                           li
-                              a(href="/users/logout" class="nav-links") Log out
+                              a(href="/users/logout" class="nav-links" id='logoutButton') Log out
                       else
                           li
                               a(href="/login" class="nav-links") Login
