303 not redirecting huh?

--- a/views/edit-review.pug
+++ b/views/edit-review.pug
@@ -32,5 +32,5 @@ block content
                 const score="#{score}";
                 document.getElementById(score).checked = true;
                 console.log(score);
-        button(class='button' id="delete-review") Delete
+        button(class='button' id="delete-review" href="/haunts/" + haunt.id) Delete
             script(src="/javascripts/delete-review.js")
