--- a/views/specificHaunt.pug
+++ b/views/specificHaunt.pug
@@ -21,8 +21,8 @@ block content
           p
             a(href="/users/" + review.userId)= review.User.fullName
             if (user && user.id == review.userId)
-              a(href="reviews/edit/" + review.id id="edit-review")
-                button Edit Review
+                a(href="/reviews/edit/" + review.id)
+                  button(id="edit-button" name=review.id) Edit Review
           p(id='score')= "Score:" + review.score
         div(class="reviewText")
           p= review.review
