--- a/views/specificHaunt.pug
+++ b/views/specificHaunt.pug
@@ -11,11 +11,12 @@ block content
       if(locals.authenticated)
         div(id="buttons")
           div(id="addToHauntlist")
-            button(type="button" ) Add To Hauntlist
+            button(type="button" id="hauntlistsButton" class="focusDropDown") Add To Hauntlist
             //- list of user's hauntlists
             div(id="hauntlists")
               each hauntlist in hauntlists
-                div(class="hauntlist")= hauntlist.title
+                div(class="hauntlist hide focusDropDown")
+                  button(type="button")= hauntlist.title
           a(href="/reviews/new/" + haunt.id)
             button Create a review
       p="Score: " + haunt.score
