--- a/views/profile.pug
+++ b/views/profile.pug
@@ -1,5 +1,6 @@
 extends layout.pug
-
+append head
+    link(rel="stylesheet" href="/stylesheets/profile.css")
 block content
     h1= currentUser.fullName + "'s Profile"
     p(class="profile-text")="Name: " + currentUser.fullName
@@ -15,3 +16,6 @@ block content
                     a(href="/hauntlists/" + hauntlist.id)= hauntlist.title + "(" + Object.keys(hauntlist).length + ")"
         else
             p= "No haunt lists to show yet!"
+    button(id="create") Create a Hauntlist
+    button(id="delete") Delete a Hauntlist
+    script(src="/javascripts/delete-hauntlist.js")
